--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,32 @@ ul {
 li {
   list-style-type: none;
 }
+
 .message {
-  background-color: #61DAFB;
-  color: white;
+  background-color:#61DAFB;
+  color:white;
   border: solid 1px #61DAFB;
   position: absolute;
   text-align: center;
-  width: 200px;
+  width:200px;
   left: 50%;
-  margin-left: -100px;
+  margin-left:-100px;
   top: 200px;
+}
+
+li span.delete-item {
+  visibility: hidden;
+}
+
+span.delete-item button {
+  background: none;
+  border: none;
+  font-size: 1em;
+  font-weight:bold;
+  text-decoration: none;
+  color:red;
+}
+
+li:hover span.delete-item {
+  visibility: visible;
 }
