--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ input {
   border: 2px solid #cccccc;
   background: #ffffff;
   border-radius: 4px;
+  color: #16335F;
   font-size: 1.6rem;
   height: 2rem;
   line-height: 2rem;
@@ -44,7 +45,7 @@ ul {
   padding: 0px; }
 
 li {
-  color: #393E41;
+  color: #16335F;
   list-style-type: none;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
@@ -85,7 +86,7 @@ a {
   text-decoration: none; }
 
 a:visited, a:active {
-  color: #393E41; }
+  color: #16335F; }
 
 a.selected {
   color: #ffffff;
@@ -102,6 +103,20 @@ a.selected {
   left: 50%;
   margin-left: -100px;
   top: 200px; }
+
+.example-enter {
+  opacity: 0.01; }
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in; }
+
+.example-leave {
+  opacity: 1; }
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in; }
 
 /* Base for label styling */
 [type="checkbox"] + label {
